# hypergraph_scheduler

./: .gitignore  README.md  pyproject.toml
artifacts/: recommendation_engine_candidate_report.md  recommendation_engine_schedule_proposal.csv  recommendation_engine_schedule_proposal.md
docs/: local_workflow.md  project_overview.md
docs/monday_ds_inputs/: README.md  dag_schedules_and_dependencies.md  monday_ds_dag_dependencies.json  monday_ds_schedule_optimization_model.json  scope.json
docs/recommendation_engine_inputs/: README.md  dag_schedules_and_dependencies.md  recommendation_engine_dag_dependencies.json  recommendation_engine_schedule_optimization_formulation.md  recommendation_engine_schedule_optimization_model.json  scope.json
notebooks/: hourly_pressure_parallel_analysis.ipynb
sql/extract/: README.md  dag_runtime_extract.sql  task_instance_extract.sql  task_reschedule_extract.sql
sql/transform/: README.md  build_recommendation_engine_views.sql  build_runtime_views.sql  build_scope_views.sql
src/hypergraph_scheduler/: __init__.py  __main__.py  config.py  duckdb_pipeline.py  models.py  optimizer.py  paths.py  reporting.py  schedule_solver.py  scopes.py
src/hypergraph_scheduler/data/: __init__.py  data_loaders.py  export_raw.py
src/hypergraph_scheduler/proposal/: __init__.py  optimizer.py  proposal_analysis.py  proposal_document.py  proposal_outputs.py
src/hypergraph_scheduler/scheduling/: __init__.py  models.py  runtime_estimation.py  schedule_solver.py  slot_optimization.py  time_utils.py
tests/: test_duckdb_pipeline.py  test_optimizer.py
