[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypergraph-scheduler"
version = "0.1.0"
description = "Local tooling for Airflow DAG dependency extraction and scheduling optimization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.1.0",
    "ortools>=9.10.4067",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
]

[project.scripts]
hypergraph-scheduler = "hypergraph_scheduler.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]
notebook = [
    "ipykernel>=6.29.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
